--- a/views/dish/getDish.ejs
+++ b/views/dish/getDish.ejs
@@ -77,7 +77,8 @@
                     <td> <%= items.myKcal[i] %> </td>
                     <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/dish/delete/<%=docs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button> 
                         <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/dish/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
-                        <button type="button" class="btn btn-warning"><a title="Editar" href="/dish/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button></td>
+                        <button type="button" class="btn btn-warning"><a title="Editar" href="/dish/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button>
+                        <button type="button" class="btn btn-success"><a title="Editar" href="/dish/download/<%=docs[i]['_id']%>"><i class="far fa-file-alt"></i></a></button></td>
                 </tr>
                 <% } %>
             </tbody>
