--- a/views/evaluation/getEvaluation.ejs
+++ b/views/evaluation/getEvaluation.ejs
@@ -66,7 +66,7 @@
 
         <% if ((items.myObject.tablaEvaluacion.valores.length) > 0) { %>
             <div class="cardInside3">
-            <table id="evaluations" class="table table-bordered table-hover table-sm">
+            <table id="evaluations" class="table table-bordered table-hover table-sm" style="font-size: 16px;">
                 <thead class="thead-dark">
                     <tr>
 
@@ -82,6 +82,7 @@
                         <tr>
                             <td> <%= items.myDocs[i].candidato %> </td>
                             <td> <%= items.myDocs[i].recomendacion %> </td>
+                            <td > <%= items.myDocs[i].date %> </td>
 
                             <% if (items.myDocs[i].resultados[0]["energia"][1] === "No recomendable") { %>
                                 <td class="text-danger"> <%= items.myDocs[i].resultados[0]["energia"][0] %> <br><%= items.myDocs[i].resultados[0]["energia"][1] %>  </td>
