Vistas por usuario

--- a/views/menu/getMenu.ejs
+++ b/views/menu/getMenu.ejs
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"> -->
     <link rel="stylesheet" type="text/css" href="/stylesheets/food.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
-    <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css"/>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
@@ -36,7 +36,7 @@
             <span> <%= items.myObject.infoPage.menus %> </span>
         </div>
 
-        <% if ((items.req.user != undefined) && (items.req.user.rol === "admin")){ %>
+
         <hr style="border-color: rgb(46, 115, 124);">
         <br>
         <form method="POST">
@@ -82,6 +82,15 @@
 
                             <% } %>
                         <td><%= items.myNutrientsMenu[i][1] %> </td>
+
+                        <% if (items.req.user.rol === "default"){ %>
+                        <td>
+                            <button type="button" class="btn btn-info"><a title="Ver detalles"
+                                    href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
+                            <button type="button" class="btn btn-success"><a title="Editar"
+                                    href="/menu/download/<%=docs[i]['_id']%>"><i
+                                        class="far fa-file-alt"></i></a></button></td>
+                        <% } else{ %>
                         <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
                                     href="/menu/delete/<%=docs[i]['_id']%>"> <i
                                         class="fas fa-trash-alt"></i></a></button>
@@ -89,73 +98,19 @@
                                     href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
                             <button type="button" class="btn btn-warning"><a title="Editar"
                                     href="/menu/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button>
-                                    <button type="button" class="btn btn-success"><a title="Editar" href="/menu/download/<%=docs[i]['_id']%>"><i class="far fa-file-alt"></i></a></button></td>
-                        </td>
-                        </td>
-                    </tr>
-                    <% } %>
-                </tbody>
-            </table>
-        </div>
-        <br>
+                            <button type="button" class="btn btn-success"><a title="Editar"
+                                    href="/menu/download/<%=docs[i]['_id']%>"><i
+                                        class="far fa-file-alt"></i></a></button></td>
 
-        <% } else { %>
-        <hr style="border-color: rgb(46, 115, 124);">
-        <br>
-        <form method="POST">
-            <div class="wrap">
-                <div class="search">
-                    <input type="text" name="_id" class="searchTerm" placeholder="<%= items.myObject.busqueda %>">
-                    <a id="submit-form-link" href="#"></a>
-                    <button type="submit" class="spanColor searchButton">
-                        <i class="fa fa-search"></i>
-                    </button>
-                </div>
-            </div>
-        </form>
-        <br> <br>
-
-        <% const  nombres_sz=  items.myObject.tablaMenu.nombres.length %>
-        <% const  nombres=  items.myObject.tablaMenu.nombres %>
-        <% const  docs_sz =   items.myDocs.length %>
-        <% const  docs =   items.myDocs %>
-
-
-        <div class="cardInside3">
-            <table id="menus" class="table table-bordered table-striped table-hover table-sm">
-                <thead class="thead-dark">
-                    <tr>
-                        <% for (var i=0; i< nombres_sz; i++) { %>
-                        <th scope="col"><%= nombres[i] %></th>
                         <% } %>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <% for (var i=0; i < docs_sz; i++) { %>
-                        <td> <%= docs[i]._id %> </td>
-                        <td>
-                            <% for (var j=0; j < docs[i].dishes.length; j++) { %>
-                            <%=docs[i].dishes[j]._id%>
 
-                            <% if( (j+1) < docs[i].dishes.length) {  %>
-                            <%= "|   "  %>
-                            <% } %>
-
-                            <% } %>
-                        <td><%= items.myNutrientsMenu[i][1] %> </td>
-                        <td>
-                            <button type="button" class="btn btn-info"><a title="Ver detalles"
-                                    href="/menu/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
-                                    <button type="button" class="btn btn-success"><a title="Descargar" href="/menu/download/<%=docs[i]['_id']%>"><i class="far fa-file-alt"></i></a></button></td>
-
-                        </td>
                     </tr>
                     <% } %>
                 </tbody>
             </table>
-            <% } %>
         </div>
+        <br>
+
         <br>
     </div>
     <%- include ("../partials/footer.ejs"); %>
