--- a/views/dish/getDish.ejs
+++ b/views/dish/getDish.ejs
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    
-<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"> -->
     <link rel="stylesheet" type="text/css" href="/stylesheets/food.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/fondo.css" />
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
 
 
@@ -60,33 +60,49 @@
         <% const  docs_sz =   items.myDocs.length %>
         <% const  docs =   items.myDocs %>
 
-     
+
         <div class="cardInside3">
-        <table id="platos" class="table table-bordered table-hover table-sm">
-            <thead class="thead-dark">
-                <tr>
-                    <% for (var i=0; i< nombres_sz; i++) { %>
-                    <th><%= nombres[i] %></th>
+            <table id="platos" class="table table-bordered table-hover table-sm">
+                <thead class="thead-dark">
+                    <tr>
+                        <% for (var i=0; i< nombres_sz; i++) { %>
+                        <th><%= nombres[i] %></th>
+                        <% } %>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <% for (var i=0; i < docs_sz; i++) { %>
+                        <td> <%= docs[i]._id %> </td>
+                        <td> <%= items.myKcal[i] %> </td>
+                        <% if (items.req.user.rol === "default"){ %>
+                            <td> 
+                        <button type="button" class="btn btn-info"><a title="Ver detalles"
+                                href="/dish/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
+                        <button type="button" class="btn btn-success"><a title="Editar"
+                                href="/dish/download/<%=docs[i]['_id']%>"><i class="far fa-file-alt"></i></a></button>
+                        </td>
+                        <% } else {%>
+     
+                        <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
+                                    href="/dish/delete/<%=docs[i]['_id']%>"> <i
+                                        class="fas fa-trash-alt"></i></a></button>
+                            <button type="button" class="btn btn-info"><a title="Ver detalles"
+                                    href="/dish/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
+                            <button type="button" class="btn btn-warning"><a title="Editar"
+                                    href="/dish/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button>
+                            <button type="button" class="btn btn-success"><a title="Editar"
+                                    href="/dish/download/<%=docs[i]['_id']%>"><i
+                                        class="far fa-file-alt"></i></a></button></td>
+                                        <% } %>
+                    </tr>
                     <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <% for (var i=0; i < docs_sz; i++) { %>
-                    <td> <%= docs[i]._id %> </td>
-                    <td> <%= items.myKcal[i] %> </td>
-                    <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/dish/delete/<%=docs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button> 
-                        <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/dish/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
-                        <button type="button" class="btn btn-warning"><a title="Editar" href="/dish/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button>
-                        <button type="button" class="btn btn-success"><a title="Editar" href="/dish/download/<%=docs[i]['_id']%>"><i class="far fa-file-alt"></i></a></button></td>
-                </tr>
-                <% } %>
-            </tbody>
-        </table>
-       
+                </tbody>
+            </table>
+
+        </div>
+        <br>
     </div>
-    <br>
-</div>
     <%- include ("../partials/footer.ejs"); %>
 </body>
 
