--- a/views/evaluation/getEvaluation.ejs
+++ b/views/evaluation/getEvaluation.ejs
@@ -14,12 +14,12 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"> -->
     <link rel="stylesheet" type="text/css" href="/stylesheets/food.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
-    <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css"/>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/stylesheets/fondo.css" />
     <!-- JQUERY AUTOCOMPLETE -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -30,9 +30,9 @@
 
 
 
-    
 
-    
+
+
 
 
 </head>
@@ -40,7 +40,7 @@
 <body>
     <%- include ("../partials/navigation.ejs"); %>
     <div class="container">
-    
+
         <div class="infoPage">
             <i class="fas fa-list-alt fa-2x"></i>
             <span> <%= items.myObject.infoPage.evaluaciones %> </span>
@@ -48,7 +48,7 @@
         <hr style="border-color: rgb(46, 115, 124);">
         <%- messages('message', locals) %>
         <br>
-        
+
 
         <form method="POST">
             <div class="wrap">
@@ -65,13 +65,20 @@
 
 
         <% if ((items.myObject.tablaEvaluacion.valores.length) > 0) { %>
-            <div class="cardInside3">
+        <div class="cardInside3">
             <table id="evaluations" class="table table-bordered table-hover table-sm" style="font-size: 16px;">
                 <thead class="thead-dark">
                     <tr>
 
                         <% for (var i=0; i< items.myObject.tablaEvaluacion.nombres.length; i++) { %>
+
+                        <% if ((items.req.user.rol === "nutricionista") || (items.req.user.rol === "admin")){ %>
                         <th> <%- items.myObject.tablaEvaluacion.nombres[i] %> </th>
+                        <% } else if ((items.req.user.rol != "nutricionista") && (items.req.user.rol != "admin")){  %>
+                        <% if ((items.myObject.tablaEvaluacion.nombres[i] != "Acciones")){ %>
+                        <th> <%- items.myObject.tablaEvaluacion.nombres[i] %> </th>
+                        <% } %>
+                        <% } %>
                         <% } %>
 
                     </tr>
@@ -79,73 +86,88 @@
                 <tbody>
                     <% for (var i=0; i< items.myDocs.length; i++) { %>
 
-                        <tr>
-                            <td> <%= items.myDocs[i].candidato %> </td>
-                            <td> <%= items.myDocs[i].recomendacion %> </td>
-                            <td > <%= items.myDocs[i].date %> </td>
+                    <tr>
+                        <td> <%= items.myDocs[i].candidato %> </td>
+                        <td> <%= items.myDocs[i].recomendacion %> </td>
+                        <td> <%= items.myDocs[i].date %> </td>
 
-                            <% if (items.myDocs[i].resultados[0]["energia"][1] === "No recomendable") { %>
-                                <td class="text-danger"> <%= items.myDocs[i].resultados[0]["energia"][0] %> <br><%= items.myDocs[i].resultados[0]["energia"][1] %>  </td>
-                            <% } else if (items.myDocs[i].resultados[0]["energia"][1] === "Recomendable") {   %>
-                                <td class="text-warning"> <%= items.myDocs[i].resultados[0]["energia"][0] %> <br><%= items.myDocs[i].resultados[0]["energia"][1] %>  </td>
-                            <% } else{ %>
-                                <td class="text-success"> <%= items.myDocs[i].resultados[0]["energia"][0] %> <br><%= items.myDocs[i].resultados[0]["energia"][1] %>  </td>
-                                <% } %>
-
-                            <% if (items.myDocs[i].resultados[0]["lipidos"][1] === "No recomendable") { %>
-                                <td class="text-danger"> <%= items.myDocs[i].resultados[0]["lipidos"][0] %> <br><%= items.myDocs[i].resultados[0]["lipidos"][1] %> </td>
-                            <% } else if (items.myDocs[i].resultados[0]["lipidos"][1] === "Recomendable") {   %>
-                                <td class="text-warning"> <%= items.myDocs[i].resultados[0]["lipidos"][0] %> <br><%= items.myDocs[i].resultados[0]["lipidos"][1] %> </td>
-                            <% } else{ %>
-                                <td class="text-success"> <%= items.myDocs[i].resultados[0]["lipidos"][0] %> <br><%= items.myDocs[i].resultados[0]["lipidos"][1] %> </td>
-                                <% } %>
-
-                            <% if (items.myDocs[i].resultados[0]["proteinas"][1] === "No recomendable") { %>
-                                <td class="text-danger"> <%= items.myDocs[i].resultados[0]["proteinas"][0] %> <br><%= items.myDocs[i].resultados[0]["proteinas"][1] %>  </td>
-                            <% } else if (items.myDocs[i].resultados[0]["proteinas"][1] === "Recomendable") {   %>
-                                <td class="text-warning"> <%= items.myDocs[i].resultados[0]["proteinas"][0] %> <br><%= items.myDocs[i].resultados[0]["proteinas"][1] %>  </td>
-                            <% } else{ %>
-                                <td class="text-success"> <%= items.myDocs[i].resultados[0]["proteinas"][0] %> <br><%= items.myDocs[i].resultados[0]["proteinas"][1] %>  </td>
-                                <% } %>
-
-                            <% if (items.myDocs[i].resultados[0]["carbohidratos"][1] === "No recomendable") { %>
-                                <td class="text-danger"> <%= items.myDocs[i].resultados[0]["carbohidratos"][0] %> <br><%= items.myDocs[i].resultados[0]["carbohidratos"][1] %>  </td>
-                            <% } else if (items.myDocs[i].resultados[0]["carbohidratos"][1] === "Recomendable") {   %>
-                                <td class="text-warning"> <%= items.myDocs[i].resultados[0]["carbohidratos"][0] %> <br><%= items.myDocs[i].resultados[0]["carbohidratos"][1] %>  </td>
-                            <% } else{ %>
-                                <td class="text-success"> <%= items.myDocs[i].resultados[0]["carbohidratos"][0] %> <br><%= items.myDocs[i].resultados[0]["carbohidratos"][1] %>  </td>
-                                <% } %>
-                
-                            <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/evaluation/delete/<%=items.myDocs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button>
-                               
-                            </td>
-                        </tr>
+                        <% if (items.myDocs[i].resultados[0]["energia"][1] === "No recomendable") { %>
+                        <td class="text-danger"> <%= items.myDocs[i].resultados[0]["energia"][0] %>
+                            <br><%= items.myDocs[i].resultados[0]["energia"][1] %> </td>
+                        <% } else if (items.myDocs[i].resultados[0]["energia"][1] === "Recomendable") {   %>
+                        <td class="text-warning"> <%= items.myDocs[i].resultados[0]["energia"][0] %>
+                            <br><%= items.myDocs[i].resultados[0]["energia"][1] %> </td>
+                        <% } else{ %>
+                        <td class="text-success"> <%= items.myDocs[i].resultados[0]["energia"][0] %>
+                            <br><%= items.myDocs[i].resultados[0]["energia"][1] %> </td>
                         <% } %>
-                   
+
+                        <% if (items.myDocs[i].resultados[0]["lipidos"][1] === "No recomendable") { %>
+                        <td class="text-danger"> <%= items.myDocs[i].resultados[0]["lipidos"][0] %>
+                            <br><%= items.myDocs[i].resultados[0]["lipidos"][1] %> </td>
+                        <% } else if (items.myDocs[i].resultados[0]["lipidos"][1] === "Recomendable") {   %>
+                        <td class="text-warning"> <%= items.myDocs[i].resultados[0]["lipidos"][0] %>
+                            <br><%= items.myDocs[i].resultados[0]["lipidos"][1] %> </td>
+                        <% } else{ %>
+                        <td class="text-success"> <%= items.myDocs[i].resultados[0]["lipidos"][0] %>
+                            <br><%= items.myDocs[i].resultados[0]["lipidos"][1] %> </td>
+                        <% } %>
+
+                        <% if (items.myDocs[i].resultados[0]["proteinas"][1] === "No recomendable") { %>
+                        <td class="text-danger"> <%= items.myDocs[i].resultados[0]["proteinas"][0] %>
+                            <br><%= items.myDocs[i].resultados[0]["proteinas"][1] %> </td>
+                        <% } else if (items.myDocs[i].resultados[0]["proteinas"][1] === "Recomendable") {   %>
+                        <td class="text-warning"> <%= items.myDocs[i].resultados[0]["proteinas"][0] %>
+                            <br><%= items.myDocs[i].resultados[0]["proteinas"][1] %> </td>
+                        <% } else{ %>
+                        <td class="text-success"> <%= items.myDocs[i].resultados[0]["proteinas"][0] %>
+                            <br><%= items.myDocs[i].resultados[0]["proteinas"][1] %> </td>
+                        <% } %>
+
+                        <% if (items.myDocs[i].resultados[0]["carbohidratos"][1] === "No recomendable") { %>
+                        <td class="text-danger"> <%= items.myDocs[i].resultados[0]["carbohidratos"][0] %>
+                            <br><%= items.myDocs[i].resultados[0]["carbohidratos"][1] %> </td>
+                        <% } else if (items.myDocs[i].resultados[0]["carbohidratos"][1] === "Recomendable") {   %>
+                        <td class="text-warning"> <%= items.myDocs[i].resultados[0]["carbohidratos"][0] %>
+                            <br><%= items.myDocs[i].resultados[0]["carbohidratos"][1] %> </td>
+                        <% } else{ %>
+                        <td class="text-success"> <%= items.myDocs[i].resultados[0]["carbohidratos"][0] %>
+                            <br><%= items.myDocs[i].resultados[0]["carbohidratos"][1] %> </td>
+                        <% } %>
+
+                        <% if ((items.req.user.rol === "nutricionista") || (items.req.user.rol === "admin")){ %>
+                        <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
+                                    href="/evaluation/delete/<%=items.myDocs[i]['_id']%>"> <i
+                                        class="fas fa-trash-alt"></i></a></button> </td>
+
+                        <% } %>
+                    </tr>
+                    <% } %>
+
                 </tbody>
-     
+
 
             </table>
             <% } %>
         </div>
-            <br>
+        <br>
     </div>
     <%- include ("../partials/footer.ejs"); %>
 
     <script>
-    $(document).ready(function () {
-        $('#evaluations').DataTable({
-            "language": {
-                "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
-                "emptyTable": " "
-            },
-            "pagingType": "simple"
+        $(document).ready(function () {
+            $('#evaluations').DataTable({
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
+                    "emptyTable": " "
+                },
+                "pagingType": "simple"
+            });
         });
-    });
-</script>
+    </script>
 
-<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
 </body>
 
 
