Ruta de usuarios en barra de navegación cuando es administrador

--- a/views/dish/dish.ejs
+++ b/views/dish/dish.ejs
@@ -46,7 +46,7 @@
                            
                           
                         </div>
-                        <p><a class="btn btn-info" href="<%= items.myObject.dishIndex[i].href %>" role="button">Ver más &raquo;</a></p>
+                        <p><a class="btn btn-info" href="<%= items.myObject.dishIndex[i].href %>" role="button"><%= items.myObject.dishIndex[i].button %> &raquo;</a></p>
                     </div>
                     <% } %>
                 </div>
