--- a/views/planification/planification.ejs
+++ b/views/planification/planification.ejs
@@ -43,7 +43,7 @@
                             <div class="feature features-icons-icon"><%= items.myObject.planificationIndex[i].name %></div>
                             <p class="text-justify"><%= items.myObject.planificationIndex[i].description %> </p>
                             </div>
-                            <p><a class="btn btn-info" href="#" role="button">Ver más &raquo;</a></p>
+                            <p><a class="btn btn-info" href="<%= items.myObject.planificationIndex[i].href %>" role="button"><%= items.myObject.planificationIndex[i].button %> &raquo;</a></p>
                       
                     </div>
                     <% } %>
