--- a/views/dish/getDish.ejs
+++ b/views/dish/getDish.ejs
@@ -23,8 +23,21 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/fondo.css" />
 
+
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
 
 
 
@@ -76,14 +89,15 @@
                         <td> <%= docs[i]._id %> </td>
                         <td> <%= items.myKcal[i] %> </td>
                         <% if (items.req.user.rol === "default"){ %>
-                            <td> 
-                        <button type="button" class="btn btn-info"><a title="Ver detalles"
-                                href="/dish/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
-                        <button type="button" class="btn btn-success"><a title="Editar"
-                                href="/dish/download/<%=docs[i]['_id']%>"><i class="far fa-file-alt"></i></a></button>
+                        <td>
+                            <button type="button" class="btn btn-info"><a title="Ver detalles"
+                                    href="/dish/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button>
+                            <button type="button" class="btn btn-success"><a title="Editar"
+                                    href="/dish/download/<%=docs[i]['_id']%>"><i
+                                        class="far fa-file-alt"></i></a></button>
                         </td>
                         <% } else {%>
-     
+
                         <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
                                     href="/dish/delete/<%=docs[i]['_id']%>"> <i
                                         class="fas fa-trash-alt"></i></a></button>
@@ -94,7 +108,7 @@
                             <button type="button" class="btn btn-success"><a title="Editar"
                                     href="/dish/download/<%=docs[i]['_id']%>"><i
                                         class="far fa-file-alt"></i></a></button></td>
-                                        <% } %>
+                        <% } %>
                     </tr>
                     <% } %>
                 </tbody>
