--- a/views/dish/insertDish.ejs
+++ b/views/dish/insertDish.ejs
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -21,11 +21,27 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/fondo3.css" />
 
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+
     <!-- JQUERY AUTOCOMPLETE -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+    
+     <!-- JS, Popper.js, and jQuery -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
+
+
 
 
 
@@ -37,14 +53,19 @@
 
     <div class="container">
         <div class="cardInside2">
-        <h1><%= items.myObject.dish.title %></h1>
-        <%- include ("../partials/message.ejs"); %>
+            <h1><%= items.myObject.dish.title %></h1>
+            <%- include ("../partials/message.ejs"); %>
         </div>
         <div class="card">
             <form method="POST" , id="aux" action='./insert'>
                 <br>
                 <% for (var i=0; i< items.myObject.dish.form.length; i++) { %>
+                <% if((items.myObject.dish.updateFormFirst[i] === "recipe") || (items.myObject.dish.updateFormFirst[i] === "imageURL")){ %>
+                <label><%= items.myObject.dish.form[i].label %></label>
+                <% } else { %>
                 <label><%= items.myObject.dish.form[i].label %><span class="required">*</span></label>
+                <% } %>
+
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
 
@@ -52,11 +73,19 @@
                                 class=" <%= items.myObject.dish.form[i].icon %>"></i></span>
 
                     </div>
+                    <% if((items.myObject.dish.updateFormFirst[i] === "recipe") || (items.myObject.dish.updateFormFirst[i] === "imageURL")){ %>
+                    <input type="<%= items.myObject.dish.form[i].type %>" class="form-control"
+                        placeholder="<%= items.myObject.dish.form[i].placeholder %>"
+                        aria-label="<%= items.myObject.dish.form[i].ariaLabel %>" aria-describedby="basic-addon1"
+                        name="<%= items.myObject.dish.form[i].name %>" #<%= items.myObject.dish.form[i].name %>>
+                    <% } else { %>
                     <input type="<%= items.myObject.dish.form[i].type %>" class="form-control"
                         placeholder="<%= items.myObject.dish.form[i].placeholder %>"
                         aria-label="<%= items.myObject.dish.form[i].ariaLabel %>" aria-describedby="basic-addon1"
                         name="<%= items.myObject.dish.form[i].name %>" #<%= items.myObject.dish.form[i].name %>
                         required>
+                    <% } %>
+
                 </div>
                 <% } %>
                 <br>
@@ -65,23 +94,23 @@
                         <div class="row">
                             <% for (var i=0; i< items.myObject.dish.formIngredientes.length; i++) { %>
                             <div class="col-sm">
-                                <label class="myLabels"><%= items.myObject.dish.formIngredientes[i].label %><span class="required">*</span></label>
+                                <label class="myLabels"><%= items.myObject.dish.formIngredientes[i].label %><span
+                                        class="required">*</span></label>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
                                         <span class=" spanColor input-group-text"><i
                                                 class=" myIcons <%= items.myObject.dish.formIngredientes[i].icon %>"></i></span>
                                     </div>
                                     <% if (items.myObject.dish.formIngredientes[i].label === "Cantidad") { %>
-                                    <input class="MyInputs" type="<%= items.myObject.dish.formIngredientes[i].type %>"
-                                        class="form-control"
+                                    <input class="MyInputs form-control" type="<%= items.myObject.dish.formIngredientes[i].type %>"
                                         placeholder="<%= items.myObject.dish.formIngredientes[i].placeholder %>"
                                         aria-label="<%= items.myObject.dish.formIngredientes[i].ariaLabel %>"
                                         aria-describedby="basic-addon1"
                                         name="<%= items.myObject.dish.formIngredientes[i].name %>"
                                         min=<%= items.myObject.dish.formIngredientes[i].min %> required>
                                     <%  } else { %>
-                                    <input class="MyInputs searchIngredient"
-                                        type="<%= items.myObject.dish.formIngredientes[i].type %>" class="form-control"
+                                    <input class="MyInputs searchIngredient form-control"
+                                        type="<%= items.myObject.dish.formIngredientes[i].type %>" 
                                         placeholder="<%= items.myObject.dish.formIngredientes[i].placeholder %>"
                                         aria-label="<%= items.myObject.dish.formIngredientes[i].ariaLabel %>"
                                         aria-describedby="basic-addon1"
@@ -92,7 +121,8 @@
                             <% } %>
                             <% for (var i=0; i< items.myObject.dish.formIngredientesSel.length; i++) { %>
                             <div class="col-sm">
-                                <label class="myLabels"><%= items.myObject.dish.formIngredientesSel[i].label %><span class="required">*</span></label>
+                                <label class="myLabels"><%= items.myObject.dish.formIngredientesSel[i].label %><span
+                                        class="required">*</span></label>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
                                         <span class=" spanColor input-group-text"><i
@@ -221,14 +251,14 @@
                         eliminar.classList.add("btn-danger");
                         eliminar.classList.add("eliminar");
                         eliminar.setAttribute("type", "button");
-                        eliminar.value ="Eliminar"
-                        col.style.display="flex";
-                        col.style["align-items"]= "center";
-                        col.style["padding-top"]= "12px";
+                        eliminar.value = "Eliminar"
+                        col.style.display = "flex";
+                        col.style["align-items"] = "center";
+                        col.style["padding-top"] = "12px";
                         col.appendChild(eliminar)
                         divRow.appendChild(col);
 
-                        
+
                         divRow.classList.add("row");
                         padre.appendChild(divRow);
 
@@ -236,7 +266,7 @@
                             var targets = $(this).closest(".row");
                             $(targets).remove();
                         });
-                   
+
                     };
 
 
@@ -312,38 +342,38 @@
             </form>
         </div>
 
-       <br>
+        <br>
 
 
         <% if ((items.myObject.tablaAlimentos.valores.length) > 0) { %>
-            <div class="cardInside3">
-        <table id="alimentos" class="table table-bordered table-hover table-sm">
-            <thead class="thead-dark">
-                <tr>
+        <div class="cardInside3">
+            <table id="alimentos" class="table table-bordered table-hover table-sm">
+                <thead class="thead-dark">
+                    <tr>
 
-                    <% for (var i=0; i< items.myObject.tablaAlimentos.nombres.length; i++) { %>
-                    <th> <%- items.myObject.tablaAlimentos.nombres[i] %> </th>
-                    <% } %>
+                        <% for (var i=0; i< items.myObject.tablaAlimentos.nombres.length; i++) { %>
+                        <th> <%- items.myObject.tablaAlimentos.nombres[i] %> </th>
+                        <% } %>
 
-                </tr>
-            </thead>
-            <tbody>
-                <% for (var i=0; i< items.myDocs.length; i++) { %>
-                <tr>
-                    <% for (var j=0; j< items.myObject.tablaAlimentos.valores.length; j++) { %>
-                    <% if ((items.myDocs[i][items.myObject.tablaAlimentos.valores[j]]) === "") { %>
-                    <td> - </td>
-                    <% } else { %>
-                    <td> <%= items.myDocs[i][items.myObject.tablaAlimentos.valores[j]] %> </td>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% for (var i=0; i< items.myDocs.length; i++) { %>
+                    <tr>
+                        <% for (var j=0; j< items.myObject.tablaAlimentos.valores.length; j++) { %>
+                        <% if ((items.myDocs[i][items.myObject.tablaAlimentos.valores[j]]) === "") { %>
+                        <td> - </td>
+                        <% } else { %>
+                        <td> <%= items.myDocs[i][items.myObject.tablaAlimentos.valores[j]] %> </td>
+                        <% } %>
+                        <% } %>
+                    </tr>
                     <% } %>
-                    <% } %>
-                </tr>
-                <% } %>
-            </tbody>
+                </tbody>
 
-        </table>
-        <br>
-    </div>
+            </table>
+            <br>
+        </div>
         <% } %>
         <br>
     </div>
