--- a/views/dish/updateDish.ejs
+++ b/views/dish/updateDish.ejs
@@ -14,8 +14,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"> -->
+
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/fondo3.css" />
@@ -24,9 +23,21 @@
     <!-- JQUERY AUTOCOMPLETE -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
+
+
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
 
 
 </head>
@@ -45,13 +56,18 @@
         <div class="cardInside3">
             <h2><%= items.myDocs._id %></h2>
         </div>
-     
+
 
         <div class="card">
             <form method="POST" , id="aux">
                 <br>
                 <% for (var i=0; i< items.myObject.dish.form.length; i++) { %>
+                <% if((items.myObject.dish.updateFormFirst[i] === "recipe") || (items.myObject.dish.updateFormFirst[i] === "imageURL")){ %>
+                <label><%= items.myObject.dish.form[i].label %></label>
+                <% } else {%>
                 <label><%= items.myObject.dish.form[i].label %><span class="required">*</span></label>
+                <% } %>
+
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
 
@@ -65,7 +81,13 @@
                         aria-label="<%= items.myObject.dish.form[i].ariaLabel %>" aria-describedby="basic-addon1"
                         name="<%= items.myObject.dish.form[i].name %>" #<%= items.myObject.dish.form[i].name %> required
                         disabled>
-                    <% } else { %>
+                    <% } else  if((items.myObject.dish.updateFormFirst[i] === "recipe") || (items.myObject.dish.updateFormFirst[i] === "imageURL")){  %>
+                    <input type="<%= items.myObject.dish.form[i].type %>"
+                        value="<%= items.myDocs[items.myObject.dish.updateFormFirst[i]] %>" class="form-control"
+                        placeholder="<%= items.myObject.dish.form[i].placeholder %>"
+                        aria-label="<%= items.myObject.dish.form[i].ariaLabel %>" aria-describedby="basic-addon1"
+                        name="<%= items.myObject.dish.form[i].name %>" #<%= items.myObject.dish.form[i].name %>>
+                    <% } else{ %>
                     <input type="<%= items.myObject.dish.form[i].type %>"
                         value="<%= items.myDocs[items.myObject.dish.updateFormFirst[i]] %>" class="form-control"
                         placeholder="<%= items.myObject.dish.form[i].placeholder %>"
@@ -73,7 +95,7 @@
                         name="<%= items.myObject.dish.form[i].name %>" #<%= items.myObject.dish.form[i].name %>
                         required>
                     <% } %>
-       
+
                 </div>
                 <% } %>
                 <br>
@@ -84,7 +106,8 @@
                         <div class="row">
                             <% for (var i=0; i< items.myObject.dish.formIngredientes.length; i++) { %>
                             <div class="col-sm">
-                                <label class="myLabels"><%= items.myObject.dish.formIngredientes[i].label %><span class="required">*</span></label>
+                                <label class="myLabels"><%= items.myObject.dish.formIngredientes[i].label %><span
+                                        class="required">*</span></label>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
                                         <span class=" spanColor input-group-text"><i
@@ -120,7 +143,8 @@
                             <% } %>
                             <% for (var i=0; i< items.myObject.dish.formIngredientesSel.length; i++) { %>
                             <div class="col-sm">
-                                <label class="myLabels"><%= items.myObject.dish.formIngredientesSel[i].label %><span class="required">*</span></label>
+                                <label class="myLabels"><%= items.myObject.dish.formIngredientesSel[i].label %><span
+                                        class="required">*</span></label>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
                                         <span class=" spanColor input-group-text"><i
@@ -172,9 +196,11 @@
 
                     $("form").on("click", ".eliminar2", function (e) {
                         const fila = document.querySelectorAll('.row');
+                        console.log("CLICK")
                         console.log(fila.length - 4)
                         if (fila.length - 4) {
                             $(this).closest('.row').remove();
+                            console.log("CLICK")
                         }
 
                     });
@@ -375,12 +401,12 @@
             </form>
         </div>
 
-       
+
         <br>
 
-            <% if ((items.myObject.tablaAlimentos.valores.length) > 0) { %>
-                <div class="cardInside3">
-            <table id="alimentos" class="table table-bordered table-hover table-sm" >
+        <% if ((items.myObject.tablaAlimentos.valores.length) > 0) { %>
+        <div class="cardInside3">
+            <table id="alimentos" class="table table-bordered table-hover table-sm">
                 <thead class="thead-dark">
                     <tr>
 
@@ -406,7 +432,7 @@
 
             </table>
         </div>
-            <% } %>
+        <% } %>
         <br>
     </div>
     <%- include ("../partials/footer.ejs"); %>
