--- a/views/evaluation/createEvaluation.ejs
+++ b/views/evaluation/createEvaluation.ejs
@@ -18,8 +18,13 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"> -->
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
-    <link rel="stylesheet" type="text/css" href="/stylesheets/fondo2.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="/stylesheets/fondo2.css" /> -->
     <link rel="stylesheet" type="text/css" href="/stylesheets/fondo3.css" />
+
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
 
 
     <!-- JQUERY AUTOCOMPLETE -->
@@ -27,6 +32,15 @@
     <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+
+  <!-- JS, Popper.js, and jQuery -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 
 
 
@@ -42,13 +56,13 @@
         </div>
         <br>
         <%- include ("../partials/message.ejs"); %>
-     
+
         <div class="card">
             <form method="POST" , id="aux" action=''>
                 <% for (var i=0; i< items.myObject.evaluacion.recomendacion.length; i++) { %>
                 <div class="col-sm">
                     <label class="myLabels"><%= items.myObject.evaluacion.recomendacion[i].label %><span
-                        class="required">*</span></label>
+                            class="required">*</span></label>
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
                             <span class=" spanColor input-group-text"><i
@@ -69,7 +83,7 @@
                 <% for (var i=0; i< items.myObject.evaluacion.form.length; i++) { %>
                 <div class="col-sm">
                     <label class="myLabels"><%= items.myObject.evaluacion.form[i].label %><span
-                        class="required">*</span></label>
+                            class="required">*</span></label>
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
                             <span class=" spanColor input-group-text"><i
@@ -91,16 +105,16 @@
                 <div class="lista2" id="lista2" style="padding-left: 16px; padding-right: 16px; ">
                     <select required class='mySelect form-control' id="select2"></select>
                 </div>
-                <br> 
+                <br>
                 <div id="cardInside" class="cardInsideVal" style="display: none;"></div>
-              
+
                 <br>
                 <div class="requiredSpan">
                     <span class="text-muted requiredSpan"><%= items.myObject.required %></span><span
                         class="required">*</span>
                 </div>
                 <br>
-                <input style="margin-left: 16px;"  type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
+                <input style="margin-left: 16px;" type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
 
 
             </form>
