--- a/views/menu/insertMenu.ejs
+++ b/views/menu/insertMenu.ejs
@@ -22,11 +22,26 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/fondo3.css" />
 
 
-    <!-- JQUERY AUTOCOMPLETE -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="/resources/demos/style.css">
+
+     <!-- JS, Popper.js, and jQuery -->
+     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+     crossorigin="anonymous"></script>
+     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+     crossorigin="anonymous"></script>
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+     crossorigin="anonymous"></script>
+
+    <!-- JQUERY AUTOCOMPLETE -->
+
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+   
 
 
 
@@ -120,7 +135,7 @@
                             const aLabel = document.createElement("LABEL");
                             console.log(myLabels[i].innerHTML)
                             aLabel.innerHTML = myLabels[i].innerHTML;
-                            aLabel.classList.add("required2")
+                            // aLabel.classList.add("required2")
                             col.appendChild(aLabel);
 
                             const divInputGroup = document.createElement("DIV");
@@ -194,8 +209,7 @@
 
                 <br>
                 <div class="requiredSpan">
-                    <span class="text-muted requiredSpan"><%= items.myObject.required %></span><span
-                        class="required">*</span>
+                    <span class="text-muted requiredSpan"><%= items.myObject.required %></span>
                 </div>
                 <br>
                 <input type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
