--- a/views/planification/getPlanification.ejs
+++ b/views/planification/getPlanification.ejs
@@ -8,23 +8,35 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script defer src="../../public/javascripts/dish.js"></script>
+    <!-- <script defer src="../../public/javascripts/dish.js"></script> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    
-<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
-<link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"> -->
+
+
     <link rel="stylesheet" type="text/css" href="/stylesheets/food.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" type="text/css" href="/stylesheets/fondo.css" />
 
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
 </head>
 
@@ -61,64 +73,76 @@
         <% const  nombre =   items.myDocs[0]._id %>
 
         <div class="cardInside3">
-        <table id="planification" class="table table-bordered table-striped table-hover table-sm">
-            <thead class="thead-dark">
-                <tr>
-                    <% for (var i=0; i< nombres_sz; i++) { %>
-                    <th scope="col"><%= nombres[i] %></th>
-                    <% } %>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <% for (var i=0; i < docs_sz; i++) { %>
-                    <td> <%= items.myDocs[i]._id  %> </td>
-                    <td> <%= items.myDocs[i].dias  %> </td>
-                    <td> 
-                    <% for (var j=0; j < items.myDocs[i].menus.length; j++) { %>
-                        <b> Día <%= j+1 %>: </b>
-                        <% for (var k=0; k < items.myDocs[i].menus[j].length; k++) { %>
-                           
+            <table id="planification" class="table table-bordered table-striped table-hover table-sm">
+                <thead class="thead-dark">
+                    <tr>
+                        <% for (var i=0; i< nombres_sz; i++) { %>
+                        <th scope="col"><%= nombres[i] %></th>
+                        <% } %>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <% for (var i=0; i < docs_sz; i++) { %>
+                        <td> <%= items.myDocs[i]._id  %> </td>
+                        <td> <%= items.myDocs[i].dias  %> </td>
+                        <td>
+                            <% for (var j=0; j < items.myDocs[i].menus.length; j++) { %>
+                            <b> Día <%= j+1 %>: </b>
+                            <% for (var k=0; k < items.myDocs[i].menus[j].length; k++) { %>
+
                             <% if ((k+1) < items.myDocs[i].menus[j].length) { %>
-                                 <%= items.myDocs[i].menus[j][k]._id  %> <br>
+                            <%= items.myDocs[i].menus[j][k]._id  %> <br>
                             <% } else{ %>
-                                 <%= items.myDocs[i].menus[j][k]._id  %> 
+                            <%= items.myDocs[i].menus[j][k]._id  %>
 
                             <% } %>
-                        <% } %>
-                      
-                        <% if (j+1 !== items.myDocs[i].menus.length ) { %>
-                        <br>
-                            <hr>
-                        <% } else{  %>
+                            <% } %>
+
+                            <% if (j+1 !== items.myDocs[i].menus.length ) { %>
                             <br>
-                        <% } %>
-                    
-                    <% } %>
-                    <% if (items.req.user.rol === "default"){ %>
+                            <hr>
+                            <% } else{  %>
+                            <br>
+                            <% } %>
+
+                            <% } %>
+                            <% if (items.req.user.rol === "default"){ %>
                         <td>
-                        <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/planification/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
-                        <button type="button" class="btn btn-success"><a title="Descargar" href="/planification/download/<%=docs[i]['_id']%>"><i class="far fa-file-alt"></i></a></button></td>
+                            <button type="button" class="btn btn-info"><a title="Ver detalles"
+                                    href="/planification/<%=docs[i]['_id']%>"><i
+                                        class="fas fa-search-plus"></i></a></button>
+                            <button type="button" class="btn btn-success"><a title="Descargar"
+                                    href="/planification/download/<%=docs[i]['_id']%>"><i
+                                        class="far fa-file-alt"></i></a></button></td>
                         <% } else{ %>
 
-                            <td> <button type="button" class="btn btn-danger"><a title="Eliminar" href="/planification/delete/<%=docs[i]['_id']%>"> <i class="fas fa-trash-alt"></i></a></button> 
-                                <button type="button" class="btn btn-info"><a title="Ver detalles"  href="/planification/<%=docs[i]['_id']%>"><i class="fas fa-search-plus"></i></a></button> 
-                                <button type="button" class="btn btn-warning"><a title="Editar" href="/planification/update/<%=docs[i]['_id']%>"><i class="fas fa-edit"></i></a></button>  
-                                 <button type="button" class="btn btn-success"><a title="Descargar" href="/planification/download/<%=docs[i]['_id']%>"><i class="far fa-file-alt"></i></a></button></td>
-                     
-
-                            <% } %>
-
-                  
-                   
-                </tr>
-
-                <% } %>
-            </td>
+                        <td> <button type="button" class="btn btn-danger"><a title="Eliminar"
+                                    href="/planification/delete/<%=docs[i]['_id']%>"> <i
+                                        class="fas fa-trash-alt"></i></a></button>
+                            <button type="button" class="btn btn-info"><a title="Ver detalles"
+                                    href="/planification/<%=docs[i]['_id']%>"><i
+                                        class="fas fa-search-plus"></i></a></button>
+                            <button type="button" class="btn btn-warning"><a title="Editar"
+                                    href="/planification/update/<%=docs[i]['_id']%>"><i
+                                        class="fas fa-edit"></i></a></button>
+                            <button type="button" class="btn btn-success"><a title="Descargar"
+                                    href="/planification/download/<%=docs[i]['_id']%>"><i
+                                        class="far fa-file-alt"></i></a></button></td>
 
 
-            </tbody>
-        </table>
+                        <% } %>
+
+
+
+                    </tr>
+
+                    <% } %>
+                    </td>
+
+
+                </tbody>
+            </table>
         </div>
         <br>
 
@@ -126,20 +150,20 @@
     <%- include ("../partials/footer.ejs"); %>
 
 </body>
-    <script>
-        $(document).ready(function () {
-            $('#planification').DataTable({
-                "language": {
+<script>
+    $(document).ready(function () {
+        $('#planification').DataTable({
+            "language": {
                 "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Spanish.json",
                 "emptyTable": " "
             },
             "pagingType": "simple",
-            });
         });
-    </script>
-    
-    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
-    
+    });
+</script>
+
+<script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
+
 
 </html>
