--- a/views/planification/insertPlanificationJson.ejs
+++ b/views/planification/insertPlanificationJson.ejs
@@ -28,6 +28,16 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 
 </head>
 
@@ -37,43 +47,43 @@
 
     <div class="container">
         <div class="cardInside2">
-        <h1><%= items.myObject.planificacion.title %></h1>
-    </div>
-    <br>
+            <h1><%= items.myObject.planificacion.title %></h1>
+        </div>
+        <br>
         <%- include ("../partials/message.ejs"); %>
         <div class="cardJson">
             <br>
 
             <p class="ejemplo"><%= items.myObject.jsonPlanification.ejemplo %></p>
             <div class="d-flex justify-content-center align-items-center p-3 texto">
-            <textarea name="textarea" class="textarea" rows="15" disabled><%= items.json %></textarea>
+                <textarea name="textarea" class="textarea" rows="15" disabled><%= items.json %></textarea>
             </div>
-           
+
 
             <form method="POST" enctype="multipart/form-data">
                 <div class="form-group">
 
                     <br> <br>
-                    
+
                     <i class="fas fa-file-upload fa-3x m-auto text-info">
                         <label for="avatar"><%= items.myObject.jsonPlanification.label %></label><br></i>
                     <br> <br>
 
-                    <input type="file" class="btn  btn-outline-dark  btn-lg btn-block" name="filename" >
+                    <input type="file" class="btn  btn-outline-dark  btn-lg btn-block" name="filename">
                     <br><br>
-                    
+
                     <input type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
 
                 </div>
             </form>
-            
+
 
             <br>
         </div>
     </div>
     <br>
     <%- include ("../partials/footer.ejs"); %>
-</body >
+</body>
 
 <script>
     $(document).ready(function () {
