--- a/views/planification/planificationDetails.ejs
+++ b/views/planification/planificationDetails.ejs
@@ -20,6 +20,16 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
 
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 
 </head>
 
@@ -63,40 +73,40 @@
                     <td>
                         <% for (var j=0; j < items.myDocs.menus[i].length; j++) { %>
 
-                            <% if ((j+1) < items.myDocs.menus[i].length) { %>
-                                <%= items.myDocs.menus[i][j]._id  %> 
-                            <% } else{ %>
-                                <%= items.myDocs.menus[i][j]._id  %>
-                            
+                        <% if ((j+1) < items.myDocs.menus[i].length) { %>
+                        <%= items.myDocs.menus[i][j]._id  %>
+                        <% } else{ %>
+                        <%= items.myDocs.menus[i][j]._id  %>
 
-                            <% } %>
-                            <br>  
-                 
+
+                        <% } %>
+                        <br>
+
                         <% } %>
                     </td>
                     <td>
-                    <% for (var j=0; j < items.myDocs.menus[i].length; j++) { %>
+                        <% for (var j=0; j < items.myDocs.menus[i].length; j++) { %>
 
                         <% for (var k=0; k < items.myDocs.menus[i][j].dishes.length; k++) { %>
-                            <% if ((k+1) < items.myDocs.menus[i][j].dishes.length) { %>
-                                <%= items.myDocs.menus[i][j].dishes[k]._id %> <b> | </b>
-                            <% } else{ %>
-                                <%= items.myDocs.menus[i][j].dishes[k]._id %>
-                                <br>
-                            <% } %>
-                           
+                        <% if ((k+1) < items.myDocs.menus[i][j].dishes.length) { %>
+                        <%= items.myDocs.menus[i][j].dishes[k]._id %> <b> | </b>
+                        <% } else{ %>
+                        <%= items.myDocs.menus[i][j].dishes[k]._id %>
+                        <br>
                         <% } %>
 
-             
-                    <% } %>
-            
-                           
+                        <% } %>
+
+
+                        <% } %>
+
+
                     </td>
-                
-            </tr>
+
+                </tr>
                 <% } %>
-          
-    
+
+
             </tbody>
         </table>
 
@@ -125,7 +135,7 @@
             </tbody>
         </table>
 
-<br>
+        <br>
 
 
     </div>
