--- a/views/recomendation/insertRecomendationJson.ejs
+++ b/views/recomendation/insertRecomendationJson.ejs
@@ -8,18 +8,16 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"> -->
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/dish.css" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/fondo3.css" />
-
 
     <!-- JQUERY AUTOCOMPLETE -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -27,12 +25,24 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+
+
 
 
 </head>
 
 <body class="jsonBody">
-    
+
     <%- include ("../partials/navigation.ejs"); %>
 
 
@@ -48,9 +58,9 @@
 
             <p class="ejemplo"><%= items.myObject.jsonRecomendation.ejemplo %></p>
             <div class="d-flex justify-content-center align-items-center p-3 texto">
-            <textarea name="textarea" class="textarea" rows="15" disabled><%= items.json %></textarea>
+                <textarea name="textarea" class="textarea" rows="15" disabled><%= items.json %></textarea>
             </div>
-           
+
 
             <form method="POST" enctype="multipart/form-data">
                 <div class="form-group">
@@ -60,21 +70,21 @@
                         <label for="avatar"><%= items.myObject.jsonRecomendation.label %></label><br></i>
                     <br> <br>
 
-                    <input type="file" class="btn  btn-outline-dark  btn-lg btn-block" name="filename" >
+                    <input type="file" class="btn  btn-outline-dark  btn-lg btn-block" name="filename">
                     <br><br>
-                    
+
                     <input type="submit" id="mySubmit" class="btn btn-info" value="Submit" />
 
                 </div>
             </form>
-            
+
 
             <br>
         </div>
     </div>
     <br>
     <%- include ("../partials/footer.ejs"); %>
-</body >
+</body>
 
 <script>
     $(document).ready(function () {
