--- a/views/recomendation/recomendationDetails.ejs
+++ b/views/recomendation/recomendationDetails.ejs
@@ -23,71 +23,83 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
+    <!-- JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+
 </head>
 
 <body>
     <%- include ("../partials/navigation.ejs"); %>
     <div class="container">
-    
+
         <div class="infoPage">
             <i class="fas fa-list-alt fa-2x"></i>
             <span> <%= items.myDocs._id %> </span>
         </div>
         <hr style="border-color: rgb(46, 115, 124); border: 1.5px solid  rgb(46, 115, 124);">
-        
+
         <div class="row cont justify-content-between">
-            <div class="col-sm " style="margin-right: 100px;" >
+            <div class="col-sm " style="margin-right: 100px;">
                 <p class="descriptionRec"> <%= items.myDocs.description %> </p>
-               
+
             </div>
             <div class="col-sm" style="margin-left: 100px; margin-right: 15px; ">
-                <p class="descriptionRec edad">  <%=items.myObject.tablaRecomendacionDetails.edad %> <%= items.myDocs.edad %> </p>
+                <p class="descriptionRec edad"> <%=items.myObject.tablaRecomendacionDetails.edad %>
+                    <%= items.myDocs.edad %> </p>
             </div>
         </div>
- 
-    <br><br>
 
-    <div class="cardInside3">
-        <span class="detailsSpan"><%= items.myObject.tablaRecomendacionDetails.title %></span>
-    </div>
+        <br><br>
+
+        <div class="cardInside3">
+            <span class="detailsSpan"><%= items.myObject.tablaRecomendacionDetails.title %></span>
+        </div>
         <% if ((items.myObject.tablaRecomendacionDetails.valores.length) > 0) { %>
-            <table id="alimentos" class="table table-bordered table-hover table-sm">
-                <thead class="thead-dark">
-                    <tr>
+        <table id="alimentos" class="table table-bordered table-hover table-sm">
+            <thead class="thead-dark">
+                <tr>
 
-                        <% for (var i=0; i< items.myObject.tablaRecomendacionDetails.nombres.length; i++) { %>
-                        <th> <%- items.myObject.tablaRecomendacionDetails.nombres[i] %> </th>
-                        <% } %>
+                    <% for (var i=0; i< items.myObject.tablaRecomendacionDetails.nombres.length; i++) { %>
+                    <th> <%- items.myObject.tablaRecomendacionDetails.nombres[i] %> </th>
+                    <% } %>
 
-                    </tr>
-                </thead>
-                <tbody>
+                </tr>
+            </thead>
+            <tbody>
 
-         
 
-                    <tr>
-                        <% for (var j=0; j< items.myObject.tablaRecomendacionDetails.valores.length; j++) { %>
-                        <% if ((items.myDocs[items.myObject.tablaRecomendacionDetails.valores[j]]) === "") { %>
-                        <td> - </td>
-                        <% } else { %>
-                        <td> <%= items.myDocs[items.myObject.tablaRecomendacionDetails.valores[j]] %> </td>
-                        
-                        <% } %>
-                       
-                        <% } %>
-                      
-                    </tr>
-          
-                </tbody>
-     
 
-            </table>
-            <% } %>
-            <br>
+                <tr>
+                    <% for (var j=0; j< items.myObject.tablaRecomendacionDetails.valores.length; j++) { %>
+                    <% if ((items.myDocs[items.myObject.tablaRecomendacionDetails.valores[j]]) === "") { %>
+                    <td> - </td>
+                    <% } else { %>
+                    <td> <%= items.myDocs[items.myObject.tablaRecomendacionDetails.valores[j]] %> </td>
+
+                    <% } %>
+
+                    <% } %>
+
+                </tr>
+
+            </tbody>
+
+
+        </table>
+        <% } %>
+        <br>
     </div>
     <%- include ("../partials/footer.ejs"); %>
 
-  
+
 </body>
 
 
