--- a/views/dish/dishDetails.ejs
+++ b/views/dish/dishDetails.ejs
@@ -44,9 +44,10 @@
             <span > <%= items.myDocs._id %> </span>
         </div>
         <hr style="border-color: rgb(46, 115, 124); border: 1.5px solid  rgb(46, 115, 124);">
+        
         <div class="row justify-content-between">
             
-            <div class="col-8">
+            <div class="col-8" style="margin-top: 35px;">
                 <p class="descriptionDish"> <%= items.myDocs.description %> </p>
                 <button type="button" class="btn btn-info"><a title="Ver receta"
                         href="<%= items.myDocs.recipe %>"><%= items.myObject.recipeDish %></a></button>
