--- a/views/planification/planificationDetails.ejs
+++ b/views/planification/planificationDetails.ejs
@@ -41,8 +41,8 @@
             <span> <%= items.myDocs._id %> </span>
         </div>
         <hr style="border-color: rgb(46, 115, 124);">
-        <div class="row justify-content-between">
-            <div class="col-8">
+        <div class="row justify-content-between espaciado" style="margin-top: 25px;">
+            <div class="col-11 "  style="margin-top: 25px;">
                 <p class="descriptionDish"> <%= items.myDocs.description %> </p>
             </div>
         </div>
