--- a/public/stylesheets/dish.css
+++ b/public/stylesheets/dish.css
@@ -25,9 +25,9 @@ h1{
 }
 
 .descriptionDish {
-  width: 600px;
-  height: 100px;
-  margin: -20px 20px 0px 0px;
+  /* width: 600px;
+  height: 100px; */
+  /* margin: -20px 20px 0px 0px; */
   text-align: justify;
   font-size: 1em;
 }
@@ -64,8 +64,9 @@ h1{
   margin: -20px 20px 0px 0px;
   border: 2px solid rgba(31, 37, 36, 0.781);
   box-shadow: 5px 5px 5px 0px rgba(104, 100, 100, 0.4);
-  width: 250px;
-  height: 170px;
+  margin: 50px;
+width: 250px;
+ height: 170px;
 }
 
 .card{
