--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -457,6 +457,10 @@ input {
   .display-4 {
     font-size: 2.25em;
   }
+  .espaciado{
+    margin-top: 100px !important;
+    text-align: justify;
+  }
 }
 
 .required{
