--- a/views/menu/menuDetails.ejs
+++ b/views/menu/menuDetails.ejs
@@ -43,6 +43,7 @@
             <span> <%= items.myDocs._id %> </span>
         </div>
         <hr style="border-color: rgb(46, 115, 124);">
+        <div class="cardInside2" style="margin-top: 50px;">
         <div class="row justify-content-between">
             <div class="col-8">
                 <p class="descriptionDish"> <%= items.myDocs.description %> </p>
@@ -71,6 +72,7 @@
 
             </tbody>
         </table>
+    </div>
 
         <div class="cardInside3">
             <span class="detailsSpan"><%= items.myObject.nutrientsMenu %></span>
@@ -92,6 +94,7 @@
                 </tr>
             </tbody>
         </table>
+
         <br>
 
     </div>
